# workflow-ci

./: README.md
.github/actions/docker-build-push/: action.yml
.github/actions/git-cliff-bump/: action.yml
.github/actions/go-quality-security/: action.yml
.github/actions/llm-pr-review/: action.yml
.github/actions/node-quality-security/: action.yml
.github/actions/python-quality-security/: action.yml
.github/actions/run-go-tests/: action.yml
.github/actions/run-node-tests/: action.yml
.github/actions/run-python-tests/: action.yml
.github/actions/setup-go-env/: action.yml
.github/actions/setup-node-env/: action.yml
.github/actions/setup-python-env/: action.yml
.github/actions/trivy-filesystem-scan/: action.yml
.github/workflows/: bench-uv-cache.yml  release.yml
extra/bench-uv-cache/: README.md  pyproject.toml
templates/common/: MIGRATION_GUIDELINES.md  RELEASE.md  ai-review.yml  cliff.toml  release-example.yml  security-review.yml
templates/forgejo/: ai-review.yml
templates/go/: cd-production.yml  ci-branch-pipeline.yml  security-orchestrator.yml
templates/node/: ci-branch-pipeline.yml
templates/python/: cd-production.yml  ci-branch-pipeline.yml  security-orchestrator.yml
