[project]
name = "bench-uv-cache"
version = "0.0.0"
description = "Synthetic project to benchmark uv cache strategies on ARC runners"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "polars>=1.0",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "matplotlib>=3.9",
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "pydantic>=2.9",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "redis>=5.0",
  "pillow>=10.4",
  "pyarrow>=17.0",
  "boto3>=1.35",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]
